# OZ_SCHOOL

Database/Day1/: chapter01_06.ipynb
Database/Day2/: chapter07_13.ipynb
Database/Day3/: Oz-db-assignment.sql
Database/Day4/: chapter22~23.sql
Database/Day8/: mongodb_data.py
Django/Day9/oz-backend-django/: pyproject.toml
Django/Day9/oz-backend-django/config/: settings.py
Django/Day9/oz-backend-django/feeds/: tests.py  urls.py  views.py
Django/Day9/oz-backend-django/reviews/: serializers.py  tests.py  urls.py
Django/Day9/oz-backend-django/users/: urls.py  views.py
Django/Day9/oz-backend-django/users/migrations/: 0002_user_is_business.py
Flask/Day1/: app.py
Flask/Day2/: api.py  app.py  schemas.py
HTML:CSS:JavaScript/: profile.html
HTML:CSS:JavaScript/Day1/: form.html  profile.html
HTML:CSS:JavaScript/Day2/: chat.css  chat.html
Linux/Day1/: linux_0113.ipynb
Linux/Day2/: linux_1426.ipynb
Python/Day 2/: Ch05_task.ipynb  Ch06_task.ipynb  Ch07_task.ipynb  Ch08_task.ipynb  Chapter0508_과제(cs).ipynb  Chapter0508_과제.ipynb  level1.ipynb  level2.ipynb  level3.ipynb
Python/Day 3/: Ch09_task.ipynb  Ch10_task.ipynb  Ch11_task.ipynb  Ch12_task.ipynb  Ch13_task.ipynb  Chapter0113_task.ipynb  Chapter0913_task.ipynb  Chapter0913_과제(cs).ipynb
Python/Day4/: Ch14_task.ipynb  Ch15_task.ipynb  Ch16_task.ipynb  Chapter0116_task.ipynb  Chapter1416_task.ipynb  Chapter1416_과제(cs).ipynb
Python/Day5/: Chapter1720_task.ipynb
Python/Day6/: Ch21_task.ipynb  Ch22_task.ipynb  Ch23_task.ipynb  Ch24_task.ipynb  (+8 more)
admin_page_project/: admin_page.html  kream_db.py
(+97 files in other folders)
